--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "d3": "^7.9.0",
     "d3-flextree": "^2.1.2",
+    "papaparse": "^5.5.2",
     "pinia": "^2.3.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
@@ -22,6 +23,7 @@
     "@types/d3": "^7.4.3",
     "@types/d3-flextree": "^2.1.4",
     "@types/node": "^22.10.7",
+    "@types/vue": "^2.0.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
     "@vue/tsconfig": "^0.7.0",
